# pick_and_place_omni_robot_ur3

./: README.md
omni_control/: CMakeLists.txt  package.xml
omni_control/config/: omni_controllers.yaml
omni_control/launch/: controllers.launch.py
omni_control/scripts/: cmd_vel_motion_test.py  test_ur3_gripper.py  ur3_gripper_interactive.py
omni_description/: CMakeLists.txt  package.xml
omni_description/launch/: description.launch.py  display.launch.py
omni_description/rviz/: display.rviz
omni_description/urdf/: omni_robot.urdf.xacro
omni_description/urdf/include/: base.urdf.xacro  camera.urdf.xacro  gripper.urdf.xacro  lidar.urdf.xacro  omni.gz_ros2_control.xacro  omni.ros2_control.xacro  wheel.urdf.xacro
omni_gazebo/: CMakeLists.txt  package.xml
omni_gazebo/config/: bridge.yaml  gz_bridge.yaml
omni_gazebo/launch/: gazebo.launch.py  omni_gazebo.launch.py  spawn.launch.py
omni_gazebo/worlds/: empty_world.world  map.stl
omni_moveit2/: CMakeLists.txt  package.xml
omni_moveit2/config/: kinematics.yaml  move_group.yaml  moveit_controllers.yaml  moveit_planning.yaml  omni_robot.srdf
omni_moveit2/launch/: moveit.launch.py
omni_moveit2/rviz/: moveit.rviz
omni_moveit2/scripts/: moveit_example_trajectory.py  moveit_motion_planner.py
omni_navigation/: CMakeLists.txt  package.xml
omni_navigation/config/: nav2_params.yaml
omni_navigation/launch/: all_in_one.launch.py  mapping_only.launch.py  nav_with_localization.launch.py  navigation.launch.py  navigation_no_docking.launch.py  rviz.launch.py
omni_navigation/maps/: my_map.pgm  my_map.yaml
omni_navigation/rviz/: navigation.rviz
omni_navigation/scripts/: diagnose_map.py  navigate_to_goal.py
omni_robot_description/: CMakeLists.txt  package.xml
pick_and_place/: README.md  package.xml  setup.cfg  setup.py
pick_and_place/launch/: color_match.launch.py
pick_and_place/pick_and_place/: __init__.py  camera_node.py  cube_spawner.py  detect_small_cubes.py  pick_middle_cube.py  puzzle_pick_place.py  rotate_scan_color.py
