<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omni_moveit2</name>
  <version>0.0.0</version>
  <description>MoveIt2 motion planning configuration for omnidirectional mobile manipulator</description>
  <maintainer email="legionaire@todo.todo">legionaire</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- MoveIt2 dependencies -->
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  
  <!-- ROS2 core -->
  <depend>rviz2</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>rclcpp</depend>

  <!-- Package dependencies -->
  <depend>omni_control</depend>
  <depend>omni_description</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
